<resources>
    <string name="app_name">Missionary Tracker</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="my_missionaries">My Missionaries</string>
    <string name="my_missionary_map">My Missionary Map</string>
    <string name="title_activity_my_missionaries">My Missionaries</string>
    <string name="no_missionaries">You haven\'t added any missionaries yet!</string>
    <string name="click_to_add">Click here to add a missionary</string>
    <string name="title_activity_maps">Missionary Map</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="parse_application_id">vJQK4ihBIZn4x1ss5IZlSaPovUpGy5wR8ybPOrIo</string>
    <string name="parse_client_key">unz3EHi67tGln7CvjqXHzBsnYySOnYzkaisGZrR3</string>
    <string name="facebook_app_id">733918216738884</string>
    <string name="facebook_sign_in">Login via Facebook</string>
    <string name="title_activity_add_missionary">Add Missionary</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mission">Mission</string>
    <string name="my_missionary_is">My missionary is:</string>
    <string name="my_missionary">My missionary:</string>
    <string name="is_still_home">Is still home</string>
    <string name="is_in_the_field">Is in the field</string>
    <string name="departure_date">Departure Date</string>
    <string name="arrival_date">Arrival Date</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Choose Picture</item>
    </string-array>

    <string name="error_external_storage">There was a problem accessing your device\'s external storage.</string>
    <string name="title_activity_missionary_details">Missionary Details</string>
    <string name="general_error">Error</string>
    <string name="saving">Saving...</string>
    <string name="time_to_write">Time To Write</string>
    <string name="missionary_p_day">Missionary P-Day</string>
    <string name="p_day_tomorrow">P-Day Tomorrow</string>
    <string name="add_area">Add Area</string>
    <string name="add_button">Add Buton</string>
    <string name="delete_button">Delete Button</string>
    <string name="areas">Areas</string>
</resources>
