<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="missionarytracker.bent.com.missionarytracker.AddMissionaryActivity"
    tools:showIn="@layout/activity_add_missionary">

    <LinearLayout style="@style/fieldContainer">

        <LinearLayout style="@style/fieldContainer">
            <EditText
                android:tag="name"
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:maxLines="1"
                android:inputType="textCapWords"
                android:singleLine="true"/>
        </LinearLayout>

        <LinearLayout style="@style/fieldContainer">
            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"/>
        </LinearLayout>


        <LinearLayout style="@style/fieldContainer">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <AutoCompleteTextView
                    android:id="@+id/auto_missions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="phone"
                    android:layout_weight="77.70"
                    android:hint="@string/mission"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout style="@style/fieldContainer">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_missionary"
                android:textSize="18sp"
                android:paddingRight="5dp"/>

            <RadioGroup
                android:id="@+id/gender_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/is_still_home"
                    android:paddingRight="5dp"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/is_in_the_field"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout style="@style/fieldContainer">

            <TextView
                android:id="@+id/departure_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/departure_date"
                android:textSize="18sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/departure_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout style="@style/fieldContainer">

            <TextView
                android:id="@+id/arrival_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arrival_date"
                android:textSize="18sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/arrival_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
